colors: switch to tokyonight

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -10,23 +10,42 @@ terminal = "kitty"
 browser  = "firefox-developer-edition"
 
 [colors.variables.colors]
-background = "1d2021"
-foreground = "d4be98"
-cursor     = "a89984"
-accent     = "a9b665"
+# tokyonight
+background = "1a1b26"
+foreground = "c0caf5"
+cursor     = "c0caf5"
+accent     = "7aa2f7"
 highlight  = "313739"
 # 16-bit colors
-black      = "665c54"
-red        = "ea6962"
-green      = "a9b665"
-orange     = "e78a4e"
-yellow     = "d8a657"
-blue       = "7daea3"
-purple     = "d3869b"
-cyan       = "89b482"
-white      = "ffffff"
-gray       = "928374"
+black      = "15161E"
+red        = "f7768e"
+green      = "9ece6a"
+orange     = "e0af68"
+yellow     = "e0af68"
+blue       = "7aa2f7"
+purple     = "bb9af7"
+cyan       = "7dcfff"
+white      = "a9b1d6"
+gray       = "414868"
 
+# gruvbox-material
+# background = "1d2021"
+# foreground = "d4be98"
+# cursor     = "a89984"
+# accent     = "a9b665"
+# highlight  = "313739"
+# # 16-bit colors
+# black      = "665c54"
+# red        = "ea6962"
+# green      = "a9b665"
+# orange     = "e78a4e"
+# yellow     = "d8a657"
+# blue       = "7daea3"
+# purple     = "d3869b"
+# cyan       = "89b482"
+# white      = "d4be98" -- original
+# white      = "ffffff"
+# gray       = "928374"
 
 [nvim.files]
 nvim = "$XDG_CONFIG_HOME/nvim"
