--- a/apps/kitty.conf
+++ b/apps/kitty.conf
@@ -17,13 +17,13 @@ background #{{colors.background}}
 foreground #{{colors.foreground}}
 
 selection_background #{{colors.foreground}}
-selection_foreground #{{colors.foreground}}
+selection_foreground #{{colors.background}}
 
 cursor #{{colors.cursor}}
 cursor_text_color background
 
 active_tab_background #{{colors.background}}
-active_tab_foreground #{{colors.foreground}}
+active_tab_foreground #{{colors.accent}}
 active_tab_font_style bold
 inactive_tab_background #{{colors.background}}
 inactive_tab_foreground #{{colors.gray}}
@@ -59,7 +59,7 @@ color14 #{{colors.cyan}}
 
 # White
 color7 #{{colors.white}}
-color15 #{{colors.white}}
+color15 #{{colors.foreground}}
 
 # ====================
 # gruvbox
