kitty: map keys to change font size

--- a/apps/kitty.conf
+++ b/apps/kitty.conf
@@ -10,6 +10,9 @@ map ctrl+shift+h show_scrollback
 map ctrl+shift+[ previous_tab
 map ctrl+shift+] next_tab
 
+map ctrl+shift+equal change_font_size current +1.0
+map ctrl+shift+minus change_font_size current -1.0
+
 # ====================
 # gruvbox-material
 # ====================
