--- a/fonts.conf
+++ b/fonts.conf
@@ -9,9 +9,9 @@
         </prefer>
     </alias>
     <alias>
-        <family>sans</family>
+        <family>sans-serif</family>
         <prefer>
-            <family>Quicksand</family>
+            <family>Cantarell</family>
         </prefer>
     </alias>
 </fontconfig>
