--- a/sway/sway/config
+++ b/sway/sway/config
@@ -22,7 +22,7 @@ set $launcher wofi --show=drun
 exec swayidle -w \
     timeout 10 'if pgrep swaylock; then swaymsg "output * dpms off"; fi' \
     resume 'swaymsg "output * dpms on"' \
-    before-sleep 'lockscreen'
+    before-sleep 'swaylock'
 
 ### Autostart
 #
