dotter: add libinput config

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -70,18 +70,19 @@ depends = ["programs"]
 depends = ["colors"]
 
 [sway.files]
-"sway/sway"                  = "$XDG_CONFIG_HOME/sway"
-"sway/waybar"                = "$XDG_CONFIG_HOME/waybar"
-"sway/swaylock"              = "$XDG_CONFIG_HOME/swaylock/config"
-"sway/gammastep.ini"         = "$XDG_CONFIG_HOME/gammastep/config.ini"
-"sway/wofi"                  = "$XDG_CONFIG_HOME/wofi"
-"sway/mako"                  = "$XDG_CONFIG_HOME/mako/config"
-"sway/kanshi"                = "$XDG_CONFIG_HOME/kanshi/config"
-"bin/swayrun"                = "$XDG_BIN_HOME/swayrun"
-"bin/grimshot"               = "$XDG_BIN_HOME/grimshot"
-"bin/waybar_mpris"           = { target = "$XDG_BIN_HOME/waybar_mpris", type = "symbolic" }
-"bin/waybar_keyboard_layout" = "$XDG_BIN_HOME/waybar_keyboard_layout"
-"bin/swayextmsg"             = "$XDG_BIN_HOME/swayextmsg"
+"sway/sway"                   = "$XDG_CONFIG_HOME/sway"
+"sway/waybar"                 = "$XDG_CONFIG_HOME/waybar"
+"sway/swaylock"               = "$XDG_CONFIG_HOME/swaylock/config"
+"sway/gammastep.ini"          = "$XDG_CONFIG_HOME/gammastep/config.ini"
+"sway/wofi"                   = "$XDG_CONFIG_HOME/wofi"
+"sway/mako"                   = "$XDG_CONFIG_HOME/mako/config"
+"sway/kanshi"                 = "$XDG_CONFIG_HOME/kanshi/config"
+"sway/libinput-gestures.conf" = "$XDG_CONFIG_HOME/libinput-gestures.conf"
+"bin/swayrun"                 = "$XDG_BIN_HOME/swayrun"
+"bin/grimshot"                = "$XDG_BIN_HOME/grimshot"
+"bin/waybar_mpris"            = { target = "$XDG_BIN_HOME/waybar_mpris", type = "symbolic" }
+"bin/waybar_keyboard_layout"  = "$XDG_BIN_HOME/waybar_keyboard_layout"
+"bin/swayextmsg"              = "$XDG_BIN_HOME/swayextmsg"
 
 [sway.variables]
 device = "unknown"
