--- a/sway/libinput-gestures.conf
+++ b/sway/libinput-gestures.conf
@@ -72,7 +72,7 @@ gesture swipe right	wtype -M alt -k Right -m alt
 ###############################################################################
 
 # Open power menu
-gesture pinch out 4	wlogout
+gesture pinch in 4	wlogout
 
 ###############################################################################
 # You can set a minimum travel distance threshold before swipe gestures
