Add more colors

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -16,14 +16,18 @@ bg_light   = "3b4261"
 foreground = "c0caf5"
 cursor     = "c0caf5"
 accent     = "7aa2f7"
+accent_dark = "507bbe"
 highlight  = "313739"
+highlight_rgb = "49, 55, 57"
 # 16-bit colors
 black      = "15161E"
 red        = "f7768e"
+red_dark   = "db4b4b"
 green      = "9ece6a"
 orange     = "e0af68"
 yellow     = "e0af68"
 blue       = "7aa2f7"
+blue_dark  = "394b70"
 purple     = "bb9af7"
 cyan       = "7dcfff"
 white      = "a9b1d6"
