--- a/sway/sway/config
+++ b/sway/sway/config
@@ -183,9 +183,9 @@ bindsym --to-code {
     XF86AudioRaiseVolume exec "pamixer --increase 2"
 
     XF86AudioStop exec "playerctl --all-players play-pause"
-    XF86AudioPlay exec "playerctl --player=spotify play-pause"
-    XF86AudioNext exec "playerctl --player=spotify next"
-    XF86AudioPrev exec "playerctl --player=spotify prev"
+    XF86AudioPlay exec "playerctl play-pause"
+    XF86AudioNext exec "playerctl next"
+    XF86AudioPrev exec "playerctl prev"
 
     XF86MonBrightnessDown exec "xbacklight -dec 5"
     XF86MonBrightnessUp exec "xbacklight -inc 5"
